--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,7 @@ body {
 
 button {
   font-family: inherit;
+  cursor: pointer;
 }
 
 a {
